# crispai-blueprint

./: .gitignore  CLAUDE.md  Makefile  main.py  pyproject.toml
docs/guides/: new-project-checklist.md
docs/practices/: api-keys.md  general.md  model-routing.md  project-setup.md  worktree.md
docs/templates/: CLAUDE.md.template  api-keys-registry.md.template  pyproject.toml.template
