[project]
name = "crispai-blueprint"
version = "0.1.0"
description = "CRISPAI best practices, templates, and project scaffolding knowledge base"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
